--- a/Login page.html
+++ b/Login page.html
@@ -19,7 +19,7 @@
                         Login
                     </div>
                     <div class="card-body">
-                        <form>
+                        <form action="index.html">
                             <div class="mb-3">
                                 <label for="email" class="form-label">Email address</label>
                                 <input type="email" class="form-control" id="email" placeholder="Enter your email id" required>
@@ -28,7 +28,7 @@
                                 <label for="password" class="form-label">Password</label>
                                 <input type="password" class="form-control" placeholder="Enter your Password" id="password" required>
                             </div>
-                            <a class="nav-link" href="index.html"><button type="button" class="btn btn-success btn-sm">Log in</button></a>
+                           <button type="submit" class="btn btn-success">Log in</button>
                         </form>
                     </div>
                 </div>
